@@ -3,6 +3,8 @@
 	* src/SDCCsymt.c,
 	  support/regression/tests/structreturn.c:
 	  Enable struct / union return for hc08, s08, mos6502, ds390.
+	* device/include/stdlib.h:
+	  Provide prototypes for division functions.
 
 2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
